--- a/src/stylesheets/app.css
+++ b/src/stylesheets/app.css
@@ -16,8 +16,32 @@ body.with-panel-left-cover .statusbar-overlay {
     background: white;
 }       
 
+.wifi-network-row {
+	padding-left: 15px;
+}
+
+.wifi-network-row:after {
+    content: "";
+    display: block;
+    width: 100%;
+    border-bottom: 0.5px solid #ccc;
+}
+
+.wifi-network-icons-col {
+	display: flex;
+	height: 43px;
+	align-items: center;
+	justify-content: flex-end;
+}
+
 .wifi-name {
 	display: inline-block;
+	width: 100%;
+	padding-left: 29px;
+}
+
+.wifi-name input {
+	/*height: 100%!important;*/
 }
 .wifi-connected-icon {
 	font-size: 19px!important;
@@ -42,7 +66,7 @@ body.with-panel-left-cover .statusbar-overlay {
 
 .wifi-network-info {
 	display:inline-block;
-	float:right;
+	margin-right: 15px;
 }
 .wifi-icon {
 	width: 18px;
