--- a/src/stylesheets/app.css
+++ b/src/stylesheets/app.css
@@ -40,7 +40,8 @@ body.with-panel-left-cover .statusbar-overlay {
 	padding-left: 29px;
 }
 
-.wifi-name input {
+.wifi-name input[disabled] {
+	opacity: 1;
 	/*height: 100%!important;*/
 }
 .wifi-connected-icon {
@@ -69,12 +70,31 @@ body.with-panel-left-cover .statusbar-overlay {
 	margin-right: 15px;
 }
 .wifi-icon {
-	width: 18px;
-	height: 18px;
-	top:2px;
+	width: 16px;
+	height: 13px;
+	/*top:2px;*/
+	bottom: 0px;
 	position:relative;
 	right: 10px;
 }
+
+.wifi-icon-animation {
+	-webkit-animation: fade 1s;
+    animation: fade 1s;
+}
+
+
+
+.wifi-icon-no-show {
+	/*opacity:;*/
+/*	-webkit-animation: fadeOut 1s;
+    animation: fadeOut 1s;*/
+	display:none;
+	/*visibility: hidden;*/
+  	/*opacity: 0;*/
+	/*transition: opacity 1s ease;*/
+}
+
 .wifi-info-icon i{
 	bottom: 2.5px;
 	font-size: 22px;
@@ -120,6 +140,84 @@ body.with-panel-left-cover .statusbar-overlay {
 	padding-bottom:10px;*/
 }
 
+/*.ui-marquee {
+	width: 80%;
+}*/
+/* Make it a marquee */
+.marquee {
+	width: 80%;
+    margin: 0 auto;
+    margin-right: 5%;
+    margin-left: 0;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.marquee span {
+    display: inline-block;
+    padding-left: 100%;
+    animation: marquee 10s linear infinite;
+}
+
+/* Make it move */
+@keyframes marquee {
+    0%   { transform: translate(0, 0); }
+    100% { transform: translate(-100%, 0); }
+}
+
+@-webkit-keyframes fadeIn {
+    from { opacity: 0; }
+      to { opacity: 1; }
+}  
+@keyframes fadeIn {
+    from { opacity: 0; }
+      to { opacity: 1; }
+}
+
+
+@-webkit-keyframes fadeOut {
+    from { opacity: 1; }
+      to { opacity: 0; }
+}  
+
+@keyframes fadeOut {
+    from { opacity: 1; }
+      to { opacity: 0; }
+}
+
+
+@keyframes fade {
+  0%,100% { opacity: 0.2 }
+  50% { opacity: 1 }
+}
+
+
+.editing-mode-text {
+	float: right;
+}
+.product-network {
+	position:relative;
+	bottom: 10px;
+	padding-left: 29px;
+	height: 20px;
+	display: block;
+	transition: all 0.5s ease;
+}
+.product-text {
+	font-size: 18px;
+}
+
+.powered-by-text {
+	font-size: 9px;
+	text-transform: uppercase;
+	line-height: 1.0;
+	position:relative;
+	left:1px;
+}
+
+#wifi-top {
+	fill: #bbbbbb;
+}
 
 input,
 textarea,
